# lipyd

./: HISTORY.rst  MANIFEST.in  README.md  README.rst  Recalibration_values_LTP.csv  Sequence_list_LTP_screen_2015.csv  _curl.py  abstract  antonella_final.csv  binding_properties.csv  binding_properties_table.tex  build.sh  combined_plots.r  common.py  control_sample.csv  enric_processed.csv  expected_features.r  expected_features.tab  expected_features_closest.tab  extract_intensities.py  features.py  fractions.csv  index.html  installation.rst  lipid_fragments_negative_mode.txt  lipid_fragments_negative_mode_ext.txt  lipid_fragments_negative_mode_v10.txt  lipid_fragments_negative_mode_v10d.txt  lipid_fragments_negative_mode_v11d.txt  lipid_fragments_negative_mode_v2.txt  lipid_fragments_negative_mode_v7.txt  lipid_fragments_negative_mode_v7d.txt  lipid_fragments_negative_mode_v8d.txt  lipid_fragments_positive_mode.txt  lipid_fragments_positive_mode_ext.txt  lipid_fragments_positive_mode_v10d.txt  lipid_fragments_positive_mode_v10dm.txt  lipid_fragments_positive_mode_v11d.txt  lipid_fragments_positive_mode_v2.txt  lipid_fragments_positive_mode_v5.txt  (+27 more)
docs/: Makefile  conf.py  index.rst
emese/: _curl.py  common.py  fragments.py  lipid.py  main.py  mass.py  ms2.py  mz.py  progress.py
gg_figures/: results_plots.r
gg_figures_manual/: results_plots.r
gg_figures_xscreen/: antonella_final.csv  enric_processed.csv  pie_bar.r  results_plots.r
latex/: ltp_workflow.tex
ltp/: __init__.py  _curl.py  common.py  ltp.py  ltp2.py  main.py  mass.py  progress.py  settings.py  (+1 more)
(+185 files in other folders)
